--- a/Python-Abaqus API Project/README
+++ b/Python-Abaqus API Project/README
@@ -1,9 +1,7 @@
-Pycharm中Directory与Package区别及如何导入module
+Hi~
+This is a tutorial about how to
 
-From <https://blog.csdn.net/Megustas_JJC/article/details/78876594>
-
-Pycharm如何自动换行
-
+Pycharm: how to soft wrap~
 From <https://blog.csdn.net/GeekLeee/article/details/73658311>
 
 refer:https://www.martinpletz.com/fe-scripting/
