--- a/Python-Abaqus API Project/README
+++ b/Python-Abaqus API Project/README
@@ -1,7 +1,17 @@
-Hi~
-This is a tutorial about how to
+Hi~!!! This is a tutorial about how to using the Python-Abaqus API to automatically create/analysis
 
 Pycharm: how to soft wrap~
 From <https://blog.csdn.net/GeekLeee/article/details/73658311>
 
-refer:https://www.martinpletz.com/fe-scripting/
+refer CAE modeling:
+https://www.martinpletz.com/fe-scripting/
+
+Abaqus Handbook:
+http://130.149.89.49:2080/v2016/books/cmd/default.htm?startat=pt01ch01.html
+
+Video:
+https://github.com/hnrwagner/ABAQUS-Python-Script/blob/main/Script_3D_cylinder_002.py
+https://github.com/hnrwagner/ABAQUS-Python-Script/blob/main/Script_3D_cylinder_004.py
+https://www.youtube.com/watch?v=QRQLliaOpm4
+
+
