--- a/Python-Abaqus API Project/README
+++ b/Python-Abaqus API Project/README
@@ -2,16 +2,18 @@ Hi~!!! This is a tutorial about how to using the Python-Abaqus API to automatica
 
 Pycharm: how to soft wrap~
 From <https://blog.csdn.net/GeekLeee/article/details/73658311>
-
 refer CAE modeling:
 https://www.martinpletz.com/fe-scripting/
 
 Abaqus Handbook:
+http://130.149.89.49:2080/v2016/books/ker/default.htm
 http://130.149.89.49:2080/v2016/books/cmd/default.htm?startat=pt01ch01.html
 
 Video:
+[1] https://www.youtube.com/watch?v=FbPBj7B4cKA
+code refer
 https://github.com/hnrwagner/ABAQUS-Python-Script/blob/main/Script_3D_cylinder_002.py
 https://github.com/hnrwagner/ABAQUS-Python-Script/blob/main/Script_3D_cylinder_004.py
-https://www.youtube.com/watch?v=QRQLliaOpm4
+[2] https://www.youtube.com/watch?v=QRQLliaOpm4
 
-
+![image](https://github.com/JiaoranWang/pythonProject/blob/master/Python-Abaqus%20API%20Project/Pics/Front_Page.jpg)
